# Lumen.AIv2

./: .env.example  .gitignore  LOCAL_ARTIFACTS.md  LUMEN_V2_ARCHITECTURE.md  LUMEN_V2_RELEASE_STATUS.md  README.md  lumen.toml.example  main.spec  pyproject.toml
docs/: desktop_packaging.md  full-system-audit-2026-04-12.md  knowledge_seed_hygiene.md  lumen_v2_authority_model.md  phase-20-human-thinking-audit.md  phase-21-capability-contracts.md  phase-22-academic-core.md  phase-27-supervised-dataset-loop.md  qa-readout-v2-packaged.json  qa-readout-v2-packaged.md  qa-readout-v2-source.json  qa-readout-v2-source.md  release-notes-1.1.md  release-notes-v2.md  runtime_architecture_authority.md  sqlite-ml-readiness-assessment-2026-04-12.md  system-sweep-report.md
packaging_hooks/: hook-scipy.special._ufuncs.py  hook-torch.py
src/lumen/: __init__.py  __main__.py  runtime_authority.py  session_visibility.py
tests/integration/: test_anh_registry_execution.py  test_cli_flows.py  test_command_route_execution.py  test_full_system_validation.py  test_tool_phase_execution.py  test_tool_signal_ask_routing.py
tests/unit/: test_academic_support_service.py  test_advisory_ml.py  test_anchor_registry.py  test_anh_input_intake.py  test_anh_spectral_scan_adapter.py  test_anti_spiral_guard.py  test_architecture_authority.py  test_archive_manager.py  test_capability_and_routing.py  test_chat_experience_support.py  test_chat_presenter.py  test_chat_ui_support.py  test_cognitive_spine.py  test_command_parser.py  test_confidence_language_alignment.py  (+63 more)
tool_bundles/: __init__.py
(+354 files in other folders)
